--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -77,7 +77,7 @@ form {
 }
 
 #username-login, #password-login {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     border-radius: 24px;
     border-style: solid;
     border-color: rgb(207, 217, 222);
@@ -86,9 +86,19 @@ form {
     text-indent: 12px;
 }
 
+#login-feedback {
+    display: block;
+    visibility: hidden;
+    margin: 5px 0 10px;
+    padding: 0;
+    text-indent: 10px;
+    font-weight: 700;
+}
+
 .username-login-box .username-password-box {
     margin: 0;
     padding: 0;
+    text-indent: 12px;
 }
 
 .username-login-box:focus-within #username-login {
@@ -125,7 +135,7 @@ hr {
     border-radius: 24px;
     width: 300px;
     height: 40px;
-    background-color: rgb(29, 155, 240);
+    background-color: rgb(29, 155, 240, 0.9);
     cursor: pointer;
     font-size: 16px;
     font-weight: 700;
@@ -133,7 +143,7 @@ hr {
     color: #fff;
 }
 
-.logIn-btn:hover {
+.login-btn:hover {
     background-color: rgb(26, 140, 216);
     transition-duration: 0.2s;
 }
